# pytorch-cpp

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  DockerfileCUDA102  LICENSE  README.md  docker-compose.yml  main.cpp  scripts.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_macos.yml  build_ubuntu.yml  build_windows.yml  workflow.yml
cmake/: check_files.cmake  copy_torch_dlls.cmake  cpplint.cmake  create_torch_dll_hardlinks.cmake  download_cifar10.cmake  download_datasets.cmake  download_flickr8k.cmake  download_libtorch.cmake  download_mnist.cmake  download_neural_style_transfer_images.cmake  download_penntreebank.cmake  fetch_cifar10.cmake  fetch_datasets.cmake  fetch_flickr8k.cmake  fetch_imagenette.cmake  fetch_libtorch.cmake  fetch_mnist.cmake  fetch_neural_style_transfer_images.cmake  fetch_penntreebank.cmake  find_gz_extractor.cmake
docker/: docker-entrypoint.sh
notebooks/: pytorch_cpp_colab_notebook.ipynb  tensor_slicing.ipynb
tutorials/advanced/generative_adversarial_network/: CMakeLists.txt  main.cpp
tutorials/advanced/image_captioning/: CMakeLists.txt
tutorials/advanced/image_captioning/include/: caption_dataset.h  data_utils.h  decoder_rnn.h  encoder_cnn.h  scheduler.h  score.h  transform.h  validate.h  vocabulary.h
tutorials/advanced/image_captioning/model/: create_encoder_cnn_backbone_scriptmodule.py
tutorials/advanced/image_captioning/src/: caption_dataset.cpp  data_utils.cpp  decoder_rnn.cpp  encoder_cnn.cpp  main.cpp  score.cpp  transform.cpp  vocabulary.cpp
tutorials/advanced/neural_style_transfer/: CMakeLists.txt
tutorials/advanced/neural_style_transfer/include/: vggnet.h
tutorials/advanced/neural_style_transfer/model/: create_vgg19_layers_scriptmodule.py
tutorials/advanced/neural_style_transfer/src/: main.cpp  vggnet.cpp
tutorials/advanced/utils/: CMakeLists.txt
tutorials/advanced/utils/include/: load_image.h  save_image.h
tutorials/advanced/utils/src/: load_image.cpp  save_image.cpp
tutorials/advanced/variational_autoencoder/: CMakeLists.txt
tutorials/advanced/variational_autoencoder/include/: variational_autoencoder.h
tutorials/advanced/variational_autoencoder/src/: main.cpp  variational_autoencoder.cpp
tutorials/basics/feedforward_neural_network/: CMakeLists.txt  main.cpp
tutorials/basics/feedforward_neural_network/include/: neural_net.h
tutorials/basics/feedforward_neural_network/src/: main.cpp  neural_net.cpp
tutorials/basics/linear_regression/: CMakeLists.txt  main.cpp
tutorials/basics/logistic_regression/: CMakeLists.txt  main.cpp
tutorials/basics/pytorch_basics/: CMakeLists.txt  main.cpp
tutorials/basics/pytorch_basics/model/: create_resnet18_scriptmodule.py
tutorials/popular/blitz/: README.md
tutorials/popular/blitz/autograd/: CMakeLists.txt  main.cpp
tutorials/popular/blitz/neural_networks/: CMakeLists.txt
tutorials/popular/blitz/neural_networks/include/: nnet.h
tutorials/popular/blitz/neural_networks/src/: main.cpp  nnet.cpp
tutorials/popular/blitz/tensors/: CMakeLists.txt  main.cpp
tutorials/popular/blitz/training_a_classifier/: CMakeLists.txt  main.cpp
tutorials/popular/blitz/training_a_classifier/include/: cifar10.h  nnet.h
tutorials/popular/blitz/training_a_classifier/src/: cifar10.cpp  main.cpp  nnet.cpp
tutorials/popular/deep_learning_with_pytorch_60min_blitz/autograd/: main.cpp
tutorials/popular/deep_learning_with_pytorch_60min_blitz/neural_networks/: CMakeLists.txt  main.cpp
tutorials/popular/deep_learning_with_pytorch_60min_blitz/what_is_pytorch/: CMakeLists.txt
tutorials/popular/transformers/: CMakeLists.txt
tutorials/popular/transformers/include/: positional_encoding.h  transformer.h
tutorials/popular/transformers/src/: positional_encoding.cpp  transformer.cpp
utils/image_io/: CMakeLists.txt
utils/image_io/include/: image_io.h
utils/image_io/src/: image_io.cpp
